# New-Cli-Installer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.updated  README.md  build_debug_checklist.md  build_log.txt  check_disk.sh  debug_prompt.md  fix_nvme3n1.sh  info.md  log  meson.build  test_nvme3n1.sh  test_raid.sh
cmake/: DisableWarningsAsErrors.cmake  cpr-filesystem-patch.cmake
docs/: compilation_fixes.md  raid_lvm_compatibility.md  raid_lvm_diagram.md  raid_lvm_implementation_plan.md  raid_lvm_index.md  raid_lvm_summary.md
gucc/: meson.build
gucc/include/gucc/: fs_utils.hpp  initcpio.hpp  string_utils.hpp  zfs_types.hpp
gucc/src/: bootloader.cpp  fs_utils.cpp  initcpio.cpp  pacmanconf_repo.cpp  string_utils.cpp
gucc/tests/: unit-grub_config_gen.cpp  unit-locale.cpp  unit-refind_extra_kern_strings.cpp
src/: config.cpp  kernel_params.cpp  tui.cpp  tui.hpp  utils.cpp  utils.cpp.orig  utils.hpp
subprojects/doctest-2.4.11/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/ftxui/: meson.build
tests/: README.md  raid_lvm_test.sh  testing_plan.md
